[package]
name = "hacker-clone"
version = "0.1.0"
authors = ["Marenda S.A. <renda_ardy@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1.5.0"
serde = "1.0.117"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
actix-identity = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2"
r2d2 = "0.8"
env_logger = "0.8.1"
log = "0.4.11"
